[package]
name = "ik_creatures_v2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.22"
roots_core.path = "../roots/roots_core"
wgpu = "23.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "23.0.1", features = ["webgl"] }
